force-app/queue-bot/default/objects/Queue_Member__c/Queue_Member__c.object-meta.xml
<CustomObject>
    <label>Queue Member</label>
    <nameField>
        <label>Queue Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queue Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>