force-app/queue-bot/default/objects/Queue_Member__c/fields/Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Group_Member__c</fullName>
    <label>Group Member</label>
    <referenceTo>Group_Member__c</referenceTo>
    <relationshipLabel>Queue Members</relationshipLabel>
    <relationshipName>Queue_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>