force-app/queue-bot/default/objects/Queue_Member__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>