force-app/queue-bot/default/objects/Queue_Member__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <referenceTo>Queue__c</referenceTo>
    <relationshipLabel>Queue Members</relationshipLabel>
    <relationshipName>Queue_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>