force-app/queue-bot/default/objects/Queue_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Place__c</columns>
    <columns>Queue__c</columns>
    <columns>Group_Member__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>